Actions
Bug #12619
closedmpxu: NULL pointer errors
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Build errors on SPARC with NULL pointer:
../../../sun4u/mpxu/io/tsalarm.c: In function 'tsalarm_attach': ../../../sun4u/mpxu/io/tsalarm.c:214: error: passing argument 6 of 'ddi_create_minor_node' makes integer from pointer without a cast ../../../common/sys/sunddi.h:1571: note: expected 'int' but argument is of type 'void *'
Updated by Electric Monk about 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 1e901b654aeabd2bde7c1b05a0d83071d41ca493
commit 1e901b654aeabd2bde7c1b05a0d83071d41ca493 Author: Toomas Soome <tsoome@me.com> Date: 2020-05-10T07:24:08.000Z 12619 mpxu: NULL pointer errors Reviewed by: Gergő Doma <domag02@gmail.com> Reviewed by: C Fraire <cfraire@me.com> Reviewed by: Patrick Mooney <pmooney@pfmooney.com> Approved by: Gordon Ross <gordon.w.ross@gmail.com>
Actions